@@ -114,14 +114,32 @@ public class UcpListenerTest  extends UcxTest {
         UcpEndpoint serverToClient = serverWorker2.newEndpoint(
             new UcpEndpointParams().setConnectionRequest(conRequest.get()));
 
-        // Temporary workaround until new connection establishment protocol in UCX.
+        // Test connection handler persists
         for (int i = 0; i < 10; i++) {
-            serverWorker1.progress();
-            serverWorker2.progress();
-            clientWorker.progress();
-            try {
-                Thread.sleep(10);
-            } catch (Exception ignored) { }
+            conRequest.set(null);
+            UcpEndpoint tmpEp = clientWorker.newEndpoint(new UcpEndpointParams()
+                .setSocketAddress(listener.getAddress()).setPeerErrorHandlingMode()
+                .setErrorHandler((ep, status, errorMsg) -> {
+
+                }));
+
+            while (conRequest.get() == null) {
+                serverWorker1.progress();
+                serverWorker2.progress();
+                clientWorker.progress();
+            }
+
+            UcpEndpoint tmpEp2 = serverWorker2.newEndpoint(
+                new UcpEndpointParams().setConnectionRequest(conRequest.get()));
+
+            UcpRequest close1 = tmpEp.closeNonBlockingFlush();
+            UcpRequest close2 = tmpEp2.closeNonBlockingFlush();
+
+            while (!close1.isCompleted() || !close2.isCompleted()) {
+                serverWorker1.progress();
+                serverWorker2.progress();
+                clientWorker.progress();
+            }
         }
 
         UcpRequest sent = serverToClient.sendStreamNonBlocking(
