@@ -12,6 +12,7 @@
 * Fix Infiniband port speed detection for HDR100
 * Fix build issues in gtest-all.cc and sock.c with GCC11
 * Fix performance degradation with cuda memory on self endpoint
+* Fix bug in JUCX listener connection handler.
 
 ## 1.10.0 (March 9, 2021)
 ### Features:
